# cthash

./: .clang-format  CMakeLists.txt  example.cpp
cmake/: pedantic.cmake
examples/: sha256.cpp  sha3.cpp  xxhash.cpp
include/: cthash-single-header.hpp
include/cthash/: value.hpp
include/cthash/encoding/: concepts.hpp
